# ferocios

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  bootstrap.sh
.cargo/: config.toml
.github/workflows/: audit.yml  build-test-clippy.yml
src/: gdt.rs  interrupts.rs  keyboard.rs  main.rs  qemu.rs  serial.rs  test.rs  util.rs
src/vga/: color.rs  color_scoped_writer.rs  mod.rs  writer.rs
