[package]
name = "ferocios"
version = "0.1.0"
authors = ["ferocios-devs"]
edition = "2018"

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.11"
volatile = "0.3.0"
x86_64 = "0.12.2"
uart_16550 = "0.2.10"
enum-iterator = "0.6.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.spinning]
version = "0.0.3"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1 = 0x21 = 33
test-timeout = 5 # seconds
